# mii-wakeup

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: build-onefile.sh
src/mii_wakeup/: __init__.py  audio.py  cli.py  detection.py  embed.py  openwakeword_adapter.py  output.py
tests/: test_audio.py  test_detection.py  test_embed.py  test_output.py
