[project]
name = "mii-wakeup"
version = "0.1.0"
description = "Tiny Unix-style openWakeWord wake-word listener"
readme = "README.md"
requires-python = ">=3.13"
license = "BSD-3-Clause"
authors = [{ name = "nipah~✰! mii_nipah@pm.me" }]
keywords = ["cli", "openwakeword", "wake-word"]
dependencies = [
    "numpy>=2.4.4",
    "openwakeword>=0.4.0",
    "sounddevice>=0.5.5",
]

[project.urls]
Repository = "https://github.com/mii-nipah/mii-wakeup"
Issues = "https://github.com/mii-nipah/mii-wakeup/issues"

[project.scripts]
mii-wakeup = "mii_wakeup.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "nuitka>=4.0.8",
    "patchelf>=0.17.2.4",
    "zstandard>=0.25.0",
]
